singleComment样式解决，接下来样式代码分离

--- a/html/index.html
+++ b/html/index.html
@@ -20,13 +20,14 @@
 
 	</head>
 	
-	<body style="background:url(../img/silverware.jpg);
+	<!--<body style="background:url(../img/silverware.jpg);
 		  background-repeat: repeat;
 		  background-attachment: fixed;
 		  font-family: georgia, garamond, serif;
 		  font-size: 11pt;
 		  foreground: #A4A400;
-		  ">
+		  ">-->
+<body>
 		
 		<!--自定义块，用于展示标题-->
 		<div class="headings" > Grandma's Lemon Meringue Pie </div>
