test5 计算器完工

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -9,14 +9,16 @@
 	<!--引入css-->
 	<link rel="stylesheet" href="../css/calculator.css" type="text/css" />
 	<!--引入js-->
+	<script type="text/javascript" src="../js/jquery-3.1.1.min.js" ></script>
 	<script type="text/javascript" src="../js/calculator.js"></script>
+
 
 	<body>
 		<div id="calcontent">
 			<table>
 				<input type="text" id="calShow" />
 				<tr>
-					<td><input type="button" onclick="add(this)" class="numbtn" value="7" /></td>
+					<td><input type="button" onclick="add(this)" class="numbtn" id ='7' value="7" /></td>
 					<td><input type="button" onclick="add(this)" class="numbtn" value="8" /></td>
 					<td><input type="button" onclick="add(this)" class="numbtn" value="9" /></td>
 					<td><input type="button" onclick="add(this)" class="optbtn" value="/" /></td>
