test2结构优化 test5界面优化

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -15,8 +15,9 @@
 
 	<body>
 		<div id="calcontent">
+			<h1> 鬼畜计算器</h1>
+			<input type="text" id="calShow" />
 			<table>
-				<input type="text" id="calShow" />
 				<tr>
 					<td><input type="button" onclick="add(this)" class="numbtn" id ='7' value="7" /></td>
 					<td><input type="button" onclick="add(this)" class="numbtn" value="8" /></td>
