css整合，删除无用css

--- a/html/skeleton.html
+++ b/html/skeleton.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<!--图片栏-->
-		<div id="bar">
+		<div id="topbar">
 			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
 			<!--<img src="../img/banner.png" alt="Rancid Tomatoes" />-->
 		</div>
@@ -74,17 +74,10 @@
 			<section id="left" style="float: left; width: 550px;">
 
 				<!--左上角bar-->
-				<div style="background-image: url(../img/rottenbackground.png);
-				background-repeat: repeat;
-				background-origin: border-box;
-				height: 83px;
-				">
-					<div style="float: left; ">
-
-						<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png" alt="Rotten" />
-					</div>
-					<div class="persentstyle" style="font-size: 48pt; color: red;font-weight: bold; float: left;margin-top: 5px;">32%</div>
-					<div class="reviewotal" style="font-size: 8pt; color: white;float: left;margin-top: 58px;">(88 reviews total)</div>
+				<div id='contentbar' >
+					<img id='barimg' src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png" alt="Rotten" />
+					<div id="persentstyle" >32%</div>
+					<div id="reviewtotal" >(88 reviews total)</div>
 				</div>
 
 				<div id="comment">
